--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,13 @@
 <%# Add the Facebook login link here %>
+
+<% if session[:user_id]%>
+    <h1><%= @user.name %></h1>
+    <h2>Email: <%= @user.email %></h2>
+    <h2>FaceBokk UID: <%= @user.uid %></h2>
+    <img src="<%= @user.image %>" alt="">
+    <%= link_to('Logout', logout_path, method: 'destroy') %>
+<%else%>
+
+    <%= link_to('Log In With FaceBook!', '/auth/facebook', method: 'post') %>
+
+<%end%>
